Changes in r2spss version 0.2.0

    + More detailed documentation of returned objects.

    + Bugfix in regression() regarding computation of standardized coefficients.

    + Bugfixes in regression() regarding nested model comparisons.

    + Added argument 'change' to function regression() such that tests on the
      R-squared change are only included in model summaries when requested.

    + Added argument 'exact' to wilcoxonTest() such that the p-value of the
      exact Wilcoxon Rank sum test is only computed when requested.

    + Plots now have horizontal axis labels by default, and scientific number
      format in axis annotations is suppressed.

    + Added Eredivisie data set and examples.