@@ -2,4 +2,5 @@
 ^\.Rproj\.user$
 LICENSE
 data/Eredivisie.sav
+data/Exams.sav
 inst/doc/paper/
