@@ -56,6 +56,15 @@ Perform a sign test for paired samples on variables of a data set.  The
 output is printed as a LaTeX table that mimics the look of SPSS output
 (version <24).
 }
+\examples{
+# load data
+data("Exams")
+
+# test whether grades differ between the
+# regular exam and the resit
+signTest(Exams, c("Regular", "Resit"))
+
+}
 \author{
 Andreas Alfons
 }
